<resources>
    <string name="INF_NoConteo">No hay conteos vigentes</string>
    <string name="INF_Limpieza">Se realizara una limpieza, se perderan todos los datos recolectados. Desea continuar?</string>
    <string name="INF_ModoIngresoRecMerc">Seleccione modo de ingreso del documento</string>
    <string name="tags_other">Etiquetas sobrantes</string>
    <string name="tags_no_enc">Etiquetas no encontradas</string>
    <string name="endpointlocal">Endpoint Local</string>
    <string name="endpointext">Endpoint externo</string>
    <string name="PhostLocal">Host Local</string>
    <string name="PportLocal">Puerto Local</string>
    <string name="PhostExt">Host Externo</string>
    <string name="PportExt">Puerto Externo</string>
    <string name="PcodBodega">Cod Bodega</string>
    <string name="PDescBodega">Nombre Bodega</string>
    <string name="PHolding">Holding</string>
    <string name="PconexType">Tipo Conexion</string>
    <string name="PDurTime">Tiempo Duracion</string>
    <string name="PDateIni">Fecha Inicio</string>
    <string name="PDateFin">Fecha Fin</string>
    <string name="motivosNull">No existen motivos</string>
    <string name="RUbicacion">Ubicacion</string>
    <string name="RSeccion">Seccion</string>
    <string name="RItem">Items</string>
    <string name="TIconteo">Conteo</string>
    <string name="TIseccion">Seccion</string>
    <string name="TIleidos">Leidos</string>
    <string name="TIPercent">%</string>
    <string name="GENoOrdenEntrada">No. O/C:</string>
    <string name="GENoOrdenCompra">Orden Compra No: </string>
    <string name="GEbtnCargar">Cargar</string>
    <string name="GECantidad">Cantidad</string>
    <string name="GECantidad_">Cantidad:</string>
    <string name="GEEstado">Estado</string>
    <string name="GECantidadTotal">Total</string>
    <string name="GECantidadTotal2">Cantidad Total:</string>
    <string name="GEitemsSearch">Items Leidos</string>
    <string name="GEitems">0/0</string>
    <string name="GEiniciar">Iniciar</string>
    <string name="GEfinalizar">Finalizar</string>
    <string name="GElimpiar">Limpiar</string>
    <string name="GENoGuiaEntrada">No. G. Entrada</string>
    <string name="GECodItems">Cod. Item</string>
    <string name="GDDestino">Destino</string>
    <string name="GDQrCode">Se ha generado correctamente la Guia de Despacho</string>
    <string name="RWDocOrigen">Doc. Origen</string>
    <string name="RWDocDestino">Doc. Destino: </string>
    <string name="RWQrCode">Se ha generado correctamente la Guia de Despacho</string>
    <string name="RWDialogTitle">Ingrese datos del documento</string>
    <string name="ISStyle">Item: </string>
    <string name="SWMotivo">Motivo</string>
    <string name="SWBodAlmacenamiento">Origen</string>
    <string name="SWNota">Nota</string>
    <string name="GDLecturaTag">Lectura de etiquetas RFID</string>
    <string name="txtuser">Usuario</string>
    <string name="txtpass">Clave</string>
    <string name="btnLogear">Ingresar</string>
    <string name="GEitemsDif">Items con Diferencias</string>
    <string name="GEtagNoEncontrados">Etiquetas no Encontradas</string>
    <string name="HR_items">Items</string>
    <string name="HR_cant">Cant. Reponer</string>
    <string name="HR_cantAnt">Cant. Anterior</string>
    <string name="HR_cantAct">Cant. Actual</string>
    <string name="HR_ventas">Ventas</string>
    <string name="HR_egreso">Egresos</string>
    <string name="HR_saldoBod">Saldo Bodega</string>
    <string name="HR_saldoOt">Saldo Externo</string>
    <string name="HR_producto">Producto</string>
    <string name="HR_local">Local</string>
    <string name="HR_prodCant">Cantidad</string>
    <string name="BTN_procesar">PROCESAR</string>
    <string name="BTN_continuar">CONTINUAR</string>
    <string name="BTN_confirmar">COMPARAR</string>
    <string name="BTN_guardar">GUARDAR</string>
    <string name="BTN_Saldos">SALDOS</string>
    <string name="BTN_Info">INFO</string>
    <string name="BTN_verResult">RESULTADO</string>
    <string name="BTN_Snapshot">SNAPSHOT</string>
    <string name="received_msg_str">Mensaje : </string>
    <string name="empty_str">""</string>
    <string name="connect_state_str">"Dispositivo conectado : "</string>
    <string name="user_action_str">"Accion de Usuario : "</string>
    <string name="enable_str">"BT ON"</string>
    <string name="disable_str">"BT OFF"</string>
    <string name="bt_state_str">"BT State"</string>
    <string name="search_str">"Start Scan"</string>
    <string name="stop_search_str">"Stop Scan"</string>
    <string name="remove_pair_str">"Remove All paired"</string>
    <string name="disconnect_str">"Desconectar"</string>
    <string name="connected_str">"Connected"</string>
    <string name="home_str">"Home"</string>
    <string name="info_str">"Informacion"</string>
</resources>