<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.kr.bluebird.newrfid.app.bbrfidbtdemo.MainActivity">
 
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/user_action_str"
				android:textColor="@color/gColorNegro"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/action_textview"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/empty_str"
				android:textColor="@color/gColorGris_n800"
				android:textSize="12sp" />
	    
	    </LinearLayout>
	        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/received_msg_str"
				android:textColor="@color/gColorNegro"
				android:textSize="12sp" />
            
            <TextView
                android:id="@+id/message_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_str"
				android:textColor="@color/gColorCyan_n700"
                android:textSize="12sp" />
            
        </LinearLayout>

	    <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/connect_state_str"
				android:textColor="@color/gColorNegro"
				android:textSize="12sp" />

			<LinearLayout android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal">
						
				<TextView
				    android:id="@+id/connected_device_textview"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/empty_str"
				    android:layout_weight="1"
				    android:textSize="12sp" />

				<Button
					android:id="@+id/bt_disconnect"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:visibility="invisible"
					android:textColor="#FF0000"
					android:layout_weight="2"
					android:text="@string/disconnect_str"
					android:textSize="12sp" />
            
            </LinearLayout>
            					            
	    </LinearLayout>

	    <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            
	        <Button
	           android:id="@+id/bt_enable"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/enable_str"
				android:backgroundTint="#1F9375"
				android:textColor="#FFFFFF"
	           android:textSize="12sp"
				android:drawableLeft="@drawable/bluetoothon"/>
	            
	        <Button
	           android:id="@+id/bt_disable"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/disable_str"
				android:backgroundTint="#EF3C10"
				android:textColor="#FFFFFF"
	           android:textSize="12sp"
				android:drawableLeft="@drawable/bluetoothoff"/>

	        <Button
               android:id="@+id/bt_state"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/bt_state_str"
               android:textSize="12sp"
				android:backgroundTint="#1895C0"
				android:textColor="#FFFFFF"
				android:drawableLeft="@drawable/infobt"/>
	        
        </LinearLayout>
	    
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            
	        <Button
	           android:id="@+id/bt_scan"
	           android:layout_gravity="fill"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
				android:backgroundTint="#1F9375"
				android:textColor="#FFFFFF"
	           android:text="@string/search_str"
	           android:textSize="12sp"
				android:drawableLeft="@drawable/bluetoothscan"/>
                
            <Button
               android:id="@+id/bt_stop_scan"
               android:layout_gravity="fill"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
				android:backgroundTint="#EF3C10"
				android:textColor="#FFFFFF"
               android:layout_weight="1"
               android:text="@string/stop_search_str"
               android:textSize="12sp"
				android:drawableLeft="@drawable/materialstopwhite"/>
            
            <ProgressBar
	            android:id="@+id/scan_progress"
	            android:layout_width="20dip"
	            android:layout_height="wrap_content"
	            android:layout_marginEnd="5dip"
	            android:visibility="invisible" />
            
            <Button
                android:layout_gravity="fill"
				android:id="@+id/bt_remove_pair"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/remove_pair_str"
				android:textSize="10sp"
				android:backgroundTint="#F38428"
				android:textColor="#FFFFFF"
				android:drawableLeft="@drawable/remove18"/>
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
		android:layout_marginLeft="5sp"
		android:layout_marginRight="5sp"
        android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="50dip"
			android:layout_marginTop="10dip"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/tvCol1"
				android:layout_width="match_parent"
				android:layout_height="40dip"
				android:layout_weight="1"
				android:background="@color/gColorAzulClaro"
				android:text="Dispositivos Disponibles"
				android:textColor="@color/gColorBlanco"
				android:textSize="14sp"
				android:textStyle="bold" />

		</LinearLayout>

        <ListView
            android:id="@+id/device_list"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
            android:clickable="true" >
        </ListView>
    
    </LinearLayout>

</LinearLayout>