<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="co.kr.bluebird.newrfid.app.bbrfidbtdemo.MainActivity">

    <item
        android:id="@+id/action_connected"
        android:iconTint="@color/gColorVerdeDark"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/connected_str"
        android:visible="false" />
    <!--<item
        android:id="@+id/action_rfid"
        android:icon="@drawable/ic_radio_rfid"
        android:iconTint="@color/gColorVerdeDark"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/connected_str"
        android:visible="false" />-->

    <item
        android:id="@+id/action_reg_intensidad"
        android:icon="@drawable/ic_reg_intensidad_white"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:visible="true"
        android:title="Intensidad Rfid"/>

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:visible="true"
        android:title="@string/home_str"/>


    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:visible="true"
        android:title="@string/info_str"/>



</menu>
